Added Abruptly_Goblins_Planner project
New practice project added

--- a/Reggie's+Linear+Regression/Untitled.ipynb
+++ b/Reggie's+Linear+Regression/Untitled.ipynb
@@ -80,10 +80,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10.25\n",
+      "17\n",
+      "5\n",
+      "The total meal cost is 12.504999999999999 dollars.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#!/bin/python3\n",
+    "\n",
+    "import math\n",
+    "import os\n",
+    "import random\n",
+    "import re\n",
+    "import sys\n",
+    "\n",
+    "# Complete the solve function below.\n",
+    "\n",
+    "meal_cost = float(input())\n",
+    "tip_percent = int(input())\n",
+    "tax_percent = int(input())\n",
+    "\n",
+    "\n",
+    "def solve(meal_cost, tip_percent, tax_percent):\n",
+    "    return (meal_cost  + meal_cost * tip_percent/100 + meal_cost *tax_percent/100)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "total_cost = solve(meal_cost, tip_percent, tax_percent)\n",
+    "print ('The total meal cost is '+str(total_cost)+' dollars.')"
+   ]
   },
   {
    "cell_type": "code",
